--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "thirdweb": "^5.98.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
